test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-service
spec:
  type: NodePort
  ports:
  - port: 8085
    targetPort: 8085
    nodePort: 32000
    protocol: TCP
  selector:
    app: canary-demo
